@@ -1,3 +1,7 @@
+== LATEST
+
+ * Fix padding comment.
+
 == 0.0.9 2010-04-29
 
  * Add support for Thin on Ruby 1.8.6.
